--- a/_quarto.yml
+++ b/_quarto.yml
@@ -11,6 +11,7 @@ book:
     - index.qmd
     - intro.qmd
     - chapter_1.qmd
+    - MODIS.qmd
     - chapter_4.qmd
     - summary.qmd
     - references.qmd
