--- a/_quarto.yml
+++ b/_quarto.yml
@@ -14,6 +14,7 @@ book:
     - chapter_2.qmd
     - chapter_4.qmd
     - chapter_5.qmd
+    - chapter_6.qmd
     - summary.qmd
     - references.qmd
 
