--- a/_quarto.yml
+++ b/_quarto.yml
@@ -15,6 +15,8 @@ book:
     - chapter_4.qmd
     - chapter_5.qmd
     - chapter_6.qmd
+    - chapter_7.qmd
+    - chapter_8.qmd
     - summary.qmd
     - references.qmd
 
