--- a/_quarto.yml
+++ b/_quarto.yml
@@ -12,6 +12,7 @@ book:
     - intro.qmd
     - chapter_1.qmd
     - chapter_2.qmd
+    - chapter_3.qmd
     - chapter_4.qmd
     - chapter_5.qmd
     - chapter_6.qmd
